AC_INIT(lib/xml++.h)
AM_CONFIG_HEADER(config.h)

GENERIC_LIBARY_NAME=xml++

GENERIC_MAJOR_VERSION=0
GENERIC_MINOR_VERSION=1
GENERIC_MICRO_VERSION=0

GENERIC_API_VERSION=0.1

PACKAGE=$GENERIC_LIBRARY_NAME
AC_SUBST(lib)

GENERIC_VERSION=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION.$GENERIC_MICRO_VERSION
GENERIC_RELEASE=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION
AC_SUBST(GENERIC_RELEASE)
AC_SUBST(GENERIC_VERSION)

VERSION=$GENERIC_VERSION

AM_INIT_AUTOMAKE(lib, $VERSION, no-define)

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL
AM_SANITY_CHECK

AC_LANG_CPLUSPLUS

AC_HEADER_STDC
AC_PROG_CXX
AC_LANG_CPLUSPLUS

AC_OUTPUT(Makefile lib/Makefile lib/dom/Makefile lib/xml/Makefile lib/exception/Makefile xml++.pc)
